--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -36,7 +36,7 @@
                   <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                 </form>
                 <!-- edit button-->
-                <!--<a href="/urls/<%= id %>/edit" class="btn btn-secondary btn-sm">Edit</a>-->
+                <a href="/urls/<%= id %>/edit" class="btn btn-secondary btn-sm">Edit</a>
               </td>
             </tr>
             <% } %>
