--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,8 +1,14 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button 
+      class="navbar-toggler" 
+      type="button" 
+      data-toggle="collapse" 
+      data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" 
+      aria-expanded="false" 
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -10,12 +16,26 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-    </div>
+      
+      <div class="ml-auto">
+        <% if (username) { %>
+        <span class="navbar-text mr-3">Welcome, <%= username %>!</span>
+      <form method="POST" action="/logout" class="form-inline">
+        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
+      </form>
+      <% } else { %>
     <!--Login form-->
-    <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" name="username" placeholder="Enter username"
+      <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
+        <input 
+        class="form-control mr-sm-2" 
+        type="text" 
+        name="username" 
+        placeholder="Enter username"
         aria-label="Username"/>
-        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Login</button>
-    </form>
+          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Login</button>
+      </form>
+      <% } %>
+    </div>
+    </div>
   </nav>
 </header>
