--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,11 +11,11 @@
   <form action="/register" method="POST">
     <div>
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
+      <input type="email" id="email" name="email" /> 
     </div>
     <div>
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required />
+      <input type="password" id="password" name="password" />
     </div>
     <button type="submit">Register</button>
   </form>
