--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,6 +11,7 @@
       aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
@@ -24,7 +25,9 @@
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
       </form>
       <% } else { %>
-    <!--Login form-->
+        <a href="/login" class = btn btn-outline-light btn-sm mr-2">Login</a>
+        <a href="/register" class = btn btn-outline-light btn-sm">Register</a>
+    <!-- Login form
       <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
         <input 
           class="form-control mr-sm-2" 
@@ -39,7 +42,7 @@
           placeholder="Enter password"
           aria-label="Password" />
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Login</button>      
-        </form>
+        </form> -->
       <% } %>
     </div>
     </div>
