--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -25,8 +25,8 @@
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
       </form>
       <% } else { %>
-        <a href="/login" class = btn btn-outline-light btn-sm mr-2">Login</a>
-        <a href="/register" class = btn btn-outline-light btn-sm">Register</a>
+        <a href="/login" class = "btn btn-outline-light btn-sm mr-2">Login</a>
+        <a href="/register" class = "btn btn-outline-light btn-sm">Register</a>
     <!-- Login form
       <form method="POST" action="/login" class="form-inline my-2 my-lg-0">
         <input 
