15 2303 Dec 24 refactor the login route

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -30,7 +30,7 @@
               class="btn btn-primary">Update</button>
           </div>
         </form>
-        <a href="#" class="btn btn-primary">Create a new URL</a>
+        <a href="/urls/new" class="btn btn-primary">Create a new URL</a>
       </div>
       <div class="card-footer text-muted"></div>
     </div>
