17 1409 Dec 24, fixed initial rejection reasons for tinyapp. Will need to recommit to get URLs for screnshots following this update.

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -15,16 +15,16 @@
   <%- include("partials/_header", { user: user}) %>
     <main style="margin: 1em;">
       <% if (user) { %>
-        <p>Logged in as: <%= user.email %>
+        <!-- <p>Logged in as: <%= user.email %>
         </p>
         <form method="POST" action="/logout">
           <button type="submit" class="btn btn-outline-danger btn-sm">Logout</button>
         </form>
-        <% } else { %>
-          <p>
+        <% } else { %> -->
+          <!-- <p>
             <a href="/login">Login</a> | <a href="/register">Register</a>
           </p>
-          <% } %>
+          <% } %> -->
             <h3>My URLs</h3>
             <table class="table">
               <thead>
