--- a/views/error_view.ejs
+++ b/views/error_view.ejs
@@ -8,6 +8,6 @@
 <body>
   <h2>Error</h2>
   <p><%= message %></p>
-  <a href="/urls">Return to My URLs</a>
+  <a href="/login">Please log in here.</a>
 </body>
 </html>
